@@ -163,7 +163,6 @@ public final class Application {
    * Store the instance configurations on file at path {@code configurationDirectory / configurationFilename}
    */
   public void storeInstanceConfigurations() {
-
     final File propertyFile = new File(configurationDirectory, configurationFilename);
     logger.info("Storing configuration properties in: " + propertyFile.getAbsolutePath());
 
