@@ -242,7 +242,7 @@ public abstract class AbstractSVNTemplateController extends AbstractCommandContr
         final Map<String, Object> model = new HashMap<String, Object>();
         logger.debug("'command' set to: " + svnCommand);
         model.put("command", svnCommand); // This is for the form to work
-        model.put("repositoryURL", configuration.getRepositoryUrl());
+        model.put("repositoryURL", configuration.getRepositoryDisplayUrl());
         model.put("numrevision", (requestedRevision == HEAD ? Long.toString(headRevision) : null));
         model.put("isHead", requestedRevision == HEAD);
         model.put("isUpdating", application.getInstance(svnCommand.getName()).isUpdatingCache());
@@ -426,7 +426,7 @@ public abstract class AbstractSVNTemplateController extends AbstractCommandContr
     final Map<String, Object> model = exception.getModel();
     logger.debug("'command' set to: " + svnCommand);
     model.put("command", svnCommand);
-    model.put("url", instanceConfiguration != null ? instanceConfiguration.getRepositoryUrl() : "");
+    model.put("repositoryURL", instanceConfiguration != null ? instanceConfiguration.getRepositoryDisplayUrl() : "");
     model.put("numrevision", null);
     return new ModelAndView("goto", model);
   }
